TypedLama/regression/negative/test005.3.lama
-- Haskell-style typing

-- Issue: определение типа отдельно и совместно
-- Три возможных решения:
--  1. жёсткая привязка Doble -> Double и отвержение в использовании функции как Int -> Int
--  2. запретить жёсткую привязку типа вообще (наилучший вариант, будет один в один как в Haskell)
--  3. запретить одновременное определение типа в отдельном и совместном стиле
double :: Double -> Double;
local double = fun (x) :: Int -> Int {
  2*x
};